# bitty

./: .ignore  CONTRIBUTING  Cargo.toml  LICENSE  README.md  build-site.rs  start-builder.bash  zzz_delete_after_launch_build-site.rs
.build-files/: bitty-0.3.2.full.js  bitty-0.3.3.full.js  bitty-1.0.0-rc2.min.js  bitty-1.0.0-rc4.full.js  bitty-1.0.0-rc4.min.js  bitty-1.0.0-rc5.full.js  bitty-1.1.0-rc1.full.js  bitty-1.1.0-rc1.min.js  bitty-1.3.0-rc1.full.js  config.json  custom-elements.json  index.html
build-input/: example-order.txt  index.html  splitter.py
config/: find-replace.txt
content/: bitty-1.0.0-rc2.full.js  bitty-1.0.0-rc2.min.js  bitty-1.0.0-rc3.full.js  bitty-1.0.0-rc4.full.js  bitty-1.0.0-rc4.min.js  bitty-1.0.0-rc5.min.js  bitty-v0.3.0--beta-3.js  bitty-v0.3.0.js  bitty-v0.4.0--beta-1.js  bitty-v0.4.0.js  bitty-v1.0.0-rc1.full.js  config.json  discord.html  index-backup.txt  index.html  index.neoj  ping.jinja  test.html  tmp.html  version.json
docs/: batch-updates.js  bitty-0.4.0.full.js  bitty-1.0.0-rc2.full.js  bitty-1.0.0-rc2.min.js  bitty-1.0.0-rc3.full.js  bitty-1.0.0-rc3.min.js  bitty-1.0.0-rc4.full.js  bitty-1.0.0-rc4.min.js  bitty-1.0.0.full.js  bitty-1.1.0-rc1.full.js  bitty-1.2.0-rc1.full.js  bitty-1.2.1-rc1.full.js  bitty-1.3.0-rc1.full.js  bitty-v0.3.0--beta-3.js  bitty-v0.3.0.js  bitty-v0.4.0--beta-1.js  bitty.js  bravo.js  call-wires-init.js  charlie.js  color-picker.js  config.json  counter.js  create-element.js  delta.js  echo.js  element-access.js  foxtrot.js  golf.js  hello-animals.js  hotel.js  index.html  isolate-element.js  (+11 more)
(+27633 files in other folders)
