[package]
name = "bitty_js_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
clearscreen = "4.0.2"
itertools = "0.14.0"
markdown = "1.0.0"
minijinja = { version = "2.9.0", features = ["custom_syntax", "loader", "builtins", "json"] }
port_check = "0.3.0"
serde = {version = "1.0.219", features = ["derive"] }
syntect = { version = "5.2.0"}
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version= "0.6.6", features = ["fs"] }
tower-livereload = "0.9.6"
walkdir = "2"


